apps/internal-router/overlays/codefresh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefresh-internal-router-ingress
  namespace: codefresh
spec:
  ingressClassName: nginx
  rules:
  - host: jklein-dev-cluster.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /webhooks
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /workflows
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /app-proxy
        pathType: Prefix
